--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body {
 	margin: 0px;
 	color: #212427;
 	font-family: "Roboto Mono", monospace;
+	background-color: #efefef;
 	background-image: url("media/background.png");
-	background-repeat: repeat;	
+	background-repeat: no-repeat; 
+	background-size: cover;
 	font-size: 20px;
 }
 
