--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 	margin: 0px;
 	color: #212427;
 	font-family: "Roboto Mono", monospace;
-	background-color: #efefef;
+	background-color: #f6f6f6;
 	background-image: url("media/background.png");
 	background-position-x: center;
 	background-repeat: no-repeat;
