--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 	color: #212427;
 	font-family: "Roboto Mono", monospace;
 	background-color: #f6f6f6;
-	background-image: url("media/background.png");
-	background-position-x: center;
+	background-image: url("media/background-image.png");
+	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	font-size: 20px;
@@ -381,6 +381,10 @@ p {
 
 @media screen and (max-width: 1024px){
 	body {
+		background-image: url("media/background-pattern.png");
+		background-position: initial;
+		background-repeat: repeat;
+		background-size: auto;
 		font-size: 14px;
 	}
 	.preview-container {
