--- a/style.css
+++ b/style.css
@@ -114,6 +114,26 @@ p {
 	}
 }
 
+.loader {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #BDBDBD;
+    border-bottom-color: #FFF;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: loader-rotation 1s linear infinite;
+}
+
+@keyframes loader-rotation {
+	0% {
+       transform: rotate(0deg);
+	}
+    100% {
+        transform: rotate(360deg);
+    }
+} 
+
 .carousel {
 	width: 100%;
 	display: none;
@@ -408,6 +428,12 @@ p {
 		.sub-details {
 			margin: 5px 0px 5px 22px;		
 		}
+	}
+	.loader {
+		width: 15px;
+		height: 15px;
+		border: 1.5px solid #BDBDBD;
+		border-bottom-color: #FFF;
 	}	
 	.carousel {
 		.carousel-cell {
