--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ p {
 	margin: 0px 5px 5px 10px;
 }
 
+.text-disabled {
+	color: lightgray;
+}
+
 .dropdown, .dropdownActive {
 	cursor: pointer;
 }
